--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Vite + TS</title>
   </head>
   <body>
+    <button
+      id="getBlobBtn"
+      style="
+        padding: 10px;
+        background-color: blue;
+        cursor: pointer;
+        color: #ffffff;
+      "
+    >
+      get blob
+    </button>
     <h1>inpainting board</h1>
     merge image :
     <button
