--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + TS</title>
+    <link rel="stylesheet" type="text/css" href="src/style.css" />
   </head>
   <body>
     <button
@@ -16,7 +17,7 @@
         color: #ffffff;
       "
     >
-      get blob
+      get image blob
     </button>
     <h1>inpainting board</h1>
     merge image :
@@ -28,7 +29,15 @@
     </button>
     merged image :
     <img id="merged_image" alt="merged image" />
-    <div></div>
+    <br />
+    exported masking image :
+    <button
+      id="mergeMaskingBtn"
+      style="padding: 10px; background-color: red; cursor: pointer"
+    >
+      Merge masking image
+    </button>
+    <img id="merged_masked_image" alt="merged image" />
     <div style="width: 80%; display: flex; justify-content: space-between">
       <div>
         <h3>Base Canvas Frame(Green Part)</h3>
@@ -46,19 +55,66 @@
           >
             bring forward
           </button>
+          <button
+            id="sendToBackBtn"
+            style="
+              margin-left: 50px;
+              padding: 10px;
+              background-color: green;
+              cursor: pointer;
+            "
+          >
+            bring to back
+          </button>
+          <button
+            id="sendBackwardBtn"
+            style="
+              padding: 10px;
+              background-color: greenyellow;
+              cursor: pointer;
+            "
+          >
+            bring backward
+          </button>
         </div>
         <br />
-        <canvas id="app" width="900" height="700"></canvas>
+        <div class="canvas_frame">
+          <canvas id="app"></canvas>
+          <canvas id="masking"></canvas>
+        </div>
       </div>
-      <div style="display: flex; align-items: center">
-        <input id="imageInput" accept="image/*" type="file" />
-
-        <button
-          id="canvasBtn"
-          style="padding: 10px; background-color: skyblue; cursor: pointer"
-        >
-          upload image
-        </button>
+      <div
+        style="
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+        "
+      >
+        <div style="display: flex; align-items: center">
+          <button
+            id="maskingBtn"
+            style="
+              background-color: black;
+              color: #ffffff;
+              padding: 10px;
+              margin-bottom: 15px;
+              cursor: pointer;
+            "
+          >
+            Masking Mode
+          </button>
+          <input type="number" id="pixelInput" />
+        </div>
+        <div style="display: flex; align-items: center">
+          <input id="imageInput" accept="image/*" type="file" />
+          <button
+            id="canvasBtn"
+            style="padding: 10px; background-color: skyblue; cursor: pointer"
+          >
+            upload image
+          </button>
+        </div>
       </div>
     </div>
 
