zoom in out 기능 전 커밋

--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@
         </div>
       </div>
     </div>
-
+    <button id="zoomUpBtn">up</button>
+    <button id="zoomDownBtn">down</button>
     <script type="module" src="/src/index.ts"></script>
   </body>
 </html>
